01_code/kubernetes/admin-mongo-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.17.0 (a74acad)
  creationTimestamp: null
  labels:
    io.kompose.service: admin-mongo
  name: admin-mongo
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: admin-mongo
    spec:
      containers:
      - image: adicom/admin-mongo
        name: admin-mongo
        ports:
        - containerPort: 1234
        resources: {}
      restartPolicy: Always
status: {}
