01_code/kubernetes/broker-3-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.17.0 (a74acad)
  creationTimestamp: null
  labels:
    io.kompose.service: broker-3
  name: broker-3
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: broker-3
    spec:
      containers:
      - env:
        - name: KAFKA_ADVERTISED_LISTENERS
          value: INTERNAL://kafka-3.kafka:9092
        - name: KAFKA_AUTO_CREATE_TOPICS_ENABLE
          value: "false"
        - name: KAFKA_BROKER_ID
          value: "3"
        - name: KAFKA_BROKER_RACK
          value: r1
        - name: KAFKA_DELETE_TOPIC_ENABLE
          value: "true"
        - name: KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS
          value: "0"
        - name: KAFKA_INTER_BROKER_LISTENER_NAME
          value: INTERNAL
        - name: KAFKA_JMX_HOSTNAME
          value: broker-3
        - name: KAFKA_JMX_OPTS
          value: -Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.authenticate=false
            -Dcom.sun.management.jmxremote.ssl=false -Dcom.sun.management.jmxremote.local.only=false
            -Dcom.sun.management.jmxremote.rmi.port=9992
        - name: KAFKA_JMX_PORT
          value: "9992"
        - name: KAFKA_LISTENERS
          value: INTERNAL://0.0.0.0:9092
        - name: KAFKA_LISTENER_SECURITY_PROTOCOL_MAP
          value: INTERNAL:PLAINTEXT
        - name: KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR
          value: "3"
        - name: KAFKA_ZOOKEEPER_CONNECT
          value: zookeeper-1:2181
        image: confluentinc/cp-enterprise-kafka:5.2.1
        name: broker-3
        ports:
        - containerPort: 9094
        resources: {}
      hostname: broker-3
      restartPolicy: Always
status: {}
