01_code/kubernetes/detect-hate-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: detect-hate
  labels:
    app: detect-hate-tf1.5.b
spec:
  replicas: 2
  selector:
    matchLabels:
      app: detect-hate-tf1.5.b
  template:
    metadata:
      labels:
        app: detect-hate-tf1.5.b
    spec:
      containers:
      - name: detect-hate-container
        image: meierale/detect-hate:tf_1.5.b
        command: ["python", "api.py"]
        args: ["-d", "False", "-p", "12345"]
        ports:
        - containerPort: 12345
      restartPolicy: Always
