01_code/kubernetes/elk-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.17.0 (a74acad)
  creationTimestamp: null
  labels:
    io.kompose.service: elk
  name: elk
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: elk
    spec:
      containers:
      - image: sebp/elk
        name: opvizor-elk
        ports:
        - containerPort: 5601
        - containerPort: 9200
        - containerPort: 5044
        resources: {}
        volumeMounts:
        - mountPath: /usr/share/elasticsearch/data
          name: elastic-volume
      restartPolicy: Always
      volumes:
      - name: elastic-volume
        persistentVolumeClaim:
          claimName: elastic-volume
status: {}
