01_code/kubernetes/mongo-express-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.17.0 (a74acad)
  creationTimestamp: null
  labels:
    io.kompose.service: mongo-express
  name: mongo-express
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: mongo-express
    spec:
      containers:
      - env:
        - name: ME_CONFIG_MONGODB_SERVER
          value: mongodb
        image: mongo-express
        name: mongo-express
        ports:
        - containerPort: 8081
        resources: {}
      restartPolicy: Always
status: {}
