01_code/kubernetes/mongodb-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.17.0 (a74acad)
  creationTimestamp: null
  labels:
    io.kompose.service: mongodb
  name: mongodb
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: mongodb
    spec:
      containers:
      - env:
        - name: MONGO_INITDB_DATABASE
          value: sample
        - name: MONGO_INITDB_PASSWORD
          value: admin
        - name: MONGO_INITDB_USERNAME
          value: admin
        image: mongo:4
        name: mongodb
        ports:
        - containerPort: 27017
        resources: {}
        volumeMounts:
        - mountPath: /data/db
          name: mongodb-volume
      restartPolicy: Always
      volumes:
      - name: mongodb-volume
        persistentVolumeClaim:
          claimName: mongodb-volume
status: {}
