01_code/kubernetes/admin-mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.17.0 (a74acad)
  creationTimestamp: null
  labels:
    io.kompose.service: admin-mongo
  name: admin-mongo
spec:
  ports:
  - name: "31234"
    port: 31234
    targetPort: 1234
  selector:
    io.kompose.service: admin-mongo
status:
  loadBalancer: {}
