01_code/kubernetes/broker-2-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.17.0 (a74acad)
  creationTimestamp: null
  labels:
    io.kompose.service: broker-2
  name: broker-2
spec:
  ports:
  - name: "9093"
    port: 9093
    targetPort: 9093
  selector:
    io.kompose.service: broker-2
status:
  loadBalancer: {}
