01_code/kubernetes/broker-3-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.17.0 (a74acad)
  creationTimestamp: null
  labels:
    io.kompose.service: broker-3
  name: broker-3
spec:
  ports:
  - name: "9094"
    port: 9094
    targetPort: 9094
  selector:
    io.kompose.service: broker-3
status:
  loadBalancer: {}
