01_code/kubernetes/elk-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.17.0 (a74acad)
  creationTimestamp: null
  labels:
    io.kompose.service: elk
  name: elk
spec:
  selector:
    k8s-app: traefik-ingress-lb
  ports:
  - name: "5601"
    port: 5601
    targetPort: 5601
  - name: "9200"
    port: 9200
    targetPort: 9200
  - name: "5044"
    port: 5044
    targetPort: 5044
  externalIPs:
  - 192.168.178.141
  selector:
    io.kompose.service: elk
status:
  loadBalancer: {}
