01_code/kubernetes/mongo-express-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.17.0 (a74acad)
  creationTimestamp: null
  labels:
    io.kompose.service: mongo-express
  name: mongo-express
spec:
  selector:
    k8s-app: traefik-ingress-lb
  ports:
  - name: "38082"
    port: 38082
    targetPort: 8081
  externalIPs:
  - 192.168.178.141
  selector:
    io.kompose.service: mongo-express
#status:
#  loadBalancer: {}
