01_code/kubernetes/detect-hate-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: detect-service
spec:
  selector:
    k8s-app: traefik-ingress-lb
  ports:
  - targetPort: 12345
    port: 12345
  externalIPs:
  - 192.168.178.141
  selector:
    app: detect-hate-tf1.5.b
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: detect-hate-ingress
  annotations:
   kubernetes.io/ingress.class: nginx
   nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
        - path: /
          backend:
            serviceName: detect-hate-service
            servicePort: 12345
