01_code/kubernetes/mongo-express-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: mongo-express-ingress
  annotations:
   kubernetes.io/ingress.class: nginx
   nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
   - http:
      paths:
        - path: /mongo/?(.*)
          backend:
            serviceName: mongo-express
            servicePort: 38082
